--- a/assets/css/anindividualproj15.css
+++ b/assets/css/anindividualproj15.css
@@ -227,7 +227,7 @@ p {
 }
 
 #underline1 {
-  opacity: 50%;
+  opacity: 0.5;
   border-radius: 50px;
   width: 9rem;
   height: 20px;
@@ -238,7 +238,7 @@ p {
 }
 
 #underline2 {
-  opacity: 50%;
+  opacity: 0.5;
   border-radius: 50px;
   width: 9.5rem;
   height: 20px;
@@ -249,7 +249,7 @@ p {
 }
 
 #underline3 {
-  opacity: 50%;
+  opacity: 0.5;
   border-radius: 50px;
   width: 12rem;
   height: 20px;
@@ -260,7 +260,7 @@ p {
 }
 
 #underline4 {
-  opacity: 50%;
+  opacity: 0.5;
   border-radius: 50px;
   width: 12.2rem;
   height: 20px;
@@ -271,7 +271,7 @@ p {
 }
 
 #underline5 {
-  opacity: 60%;
+  opacity: 0.6;
   border-radius: 50px;
   width: 15rem;
   height: 20px;
@@ -282,7 +282,7 @@ p {
 }
 
 #underline6 {
-  opacity: 60%;
+  opacity: 0.6;
   border-radius: 50px;
   width: 13rem;
   height: 20px;
@@ -293,7 +293,7 @@ p {
 }
 
 #underline7 {
-  opacity: 60%;
+  opacity: 0.6;
   border-radius: 50px;
   width: 15rem;
   height: 20px;
@@ -304,7 +304,7 @@ p {
 }
 
 #underline8 {
-  opacity: 60%;
+  opacity: 0.6;
   border-radius: 50px;
   width: 15rem;
   height: 20px;
@@ -503,7 +503,7 @@ p {
     padding-bottom: 2rem;
   }
   #underline1 {
-    opacity: 50%;
+    opacity: 0.6;
     border-radius: 50px;
     width: 7.5rem;
     height: 20px;
@@ -513,7 +513,7 @@ p {
             transform: translate(-3px, -28px);
   }
   #underline2 {
-    opacity: 50%;
+    opacity: 0.6;
     border-radius: 50px;
     width: 8.125rem;
     height: 20px;
@@ -523,7 +523,7 @@ p {
             transform: translate(-3px, -28px);
   }
   #underline3 {
-    opacity: 50%;
+    opacity: 0.6;
     border-radius: 50px;
     width: 10rem;
     height: 20px;
@@ -533,7 +533,7 @@ p {
             transform: translate(-3px, -28px);
   }
   #underline4 {
-    opacity: 50%;
+    opacity: 0.6;
     border-radius: 50px;
     width: 10rem;
     height: 20px;
@@ -543,7 +543,7 @@ p {
             transform: translate(-3px, -28px);
   }
   #underline5 {
-    opacity: 60%;
+    opacity: 0.6;
     border-radius: 50px;
     width: 10rem;
     height: 20px;
@@ -553,7 +553,7 @@ p {
             transform: translate(10px, 30px);
   }
   #underline6 {
-    opacity: 60%;
+    opacity: 0.6;
     border-radius: 50px;
     width: 10rem;
     height: 20px;
@@ -563,7 +563,7 @@ p {
             transform: translate(10px, 30px);
   }
   #underline7 {
-    opacity: 60%;
+    opacity: 0.6;
     border-radius: 50px;
     width: 10rem;
     height: 20px;
@@ -573,7 +573,7 @@ p {
             transform: translate(10px, 30px);
   }
   #underline8 {
-    opacity: 60%;
+    opacity: 0.6;
     border-radius: 50px;
     width: 10rem;
     height: 20px;
