--- a/assets/css/anindividualproj15.scss
+++ b/assets/css/anindividualproj15.scss
@@ -223,7 +223,7 @@ p {
 }
 
 #underline1 {
-    opacity: 50%;
+    opacity: 0.5;
     border-radius: 50px;
     width: 9rem;
     height: 20px;
@@ -233,7 +233,7 @@ p {
 }
 
 #underline2 {
-    opacity: 50%;
+    opacity: 0.5;
     border-radius: 50px;
     width: 9.5rem;
     height: 20px;
@@ -243,7 +243,7 @@ p {
 }
 
 #underline3 {
-    opacity: 50%;
+    opacity: 0.5;
     border-radius: 50px;
     width: 12rem;
     height: 20px;
@@ -253,7 +253,7 @@ p {
 }
 
 #underline4 {
-    opacity: 50%;
+    opacity: 0.5;
     border-radius: 50px;
     width: 12.2rem;
     height: 20px;
@@ -263,7 +263,7 @@ p {
 }
 
 #underline5 {
-    opacity: 60%;
+    opacity: 0.6;
     border-radius: 50px;
     width: 15rem;
     height: 20px;
@@ -273,7 +273,7 @@ p {
 }
 
 #underline6 {
-    opacity: 60%;
+    opacity: 0.6;
     border-radius: 50px;
     width: 13rem;
     height: 20px;
@@ -283,7 +283,7 @@ p {
 }
 
 #underline7 {
-    opacity: 60%;
+    opacity: 0.6;
     border-radius: 50px;
     width: 15rem;
     height: 20px;
@@ -293,7 +293,7 @@ p {
 }
 
 #underline8 {
-    opacity: 60%;
+    opacity: 0.6;
     border-radius: 50px;
     width: 15rem;
     height: 20px;
@@ -521,7 +521,7 @@ p {
 
 
         #underline1 {
-            opacity: 50%;
+            opacity: 0.6;
             border-radius: 50px;
             width: 7.5rem;
             height: 20px;
@@ -531,7 +531,7 @@ p {
         }
 
         #underline2 {
-            opacity: 50%;
+            opacity: 0.6;
             border-radius: 50px;
             width: 8.125rem;
             height: 20px;
@@ -541,7 +541,7 @@ p {
         }
 
         #underline3 {
-            opacity: 50%;
+            opacity: 0.6;
             border-radius: 50px;
             width: 10rem;
             height: 20px;
@@ -551,7 +551,7 @@ p {
         }
 
         #underline4 {
-            opacity: 50%;
+            opacity: 0.6;
             border-radius: 50px;
             width: 10rem;
             height: 20px;
@@ -561,7 +561,7 @@ p {
         }
 
         #underline5 {
-            opacity: 60%;
+            opacity: 0.6;
             border-radius: 50px;
             width: 10rem;
             height: 20px;
@@ -571,7 +571,7 @@ p {
         }
 
         #underline6 {
-            opacity: 60%;
+            opacity: 0.6;
             border-radius: 50px;
             width: 10rem;
             height: 20px;
@@ -581,7 +581,7 @@ p {
         }
 
         #underline7 {
-            opacity: 60%;
+            opacity: 0.6;
             border-radius: 50px;
             width: 10rem;
             height: 20px;
@@ -591,7 +591,7 @@ p {
         }
 
         #underline8 {
-            opacity: 60%;
+            opacity: 0.6;
             border-radius: 50px;
             width: 10rem;
             height: 20px;
